// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should end game when n is larger than remaining rounds 1`] = `
Object {
  "endTime": 1970-01-01T00:00:00.001Z,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "b": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "c": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "d": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stage": "ended",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should end game when skipping on last round 1`] = `
Object {
  "endTime": 1970-01-01T00:00:00.001Z,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 1,
  "scores": Object {
    "a": Array [
      0,
    ],
    "b": Array [
      0,
    ],
    "c": Array [
      0,
    ],
    "d": Array [
      0,
    ],
  },
  "stage": "ended",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should fill 0 for scores on skipped rounds 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 2,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
    ],
    "b": Array [
      0,
    ],
    "c": Array [
      0,
    ],
    "d": Array [
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should not end game when skipping on second last round 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 2,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 2,
  "scores": Object {
    "a": Array [
      0,
    ],
    "b": Array [
      0,
    ],
    "c": Array [
      0,
    ],
    "d": Array [
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`it should skip multiple rounds 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "b",
    "c",
    "d",
    "a",
  ],
  "currentRound": 6,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 13,
  "scores": Object {
    "a": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "b": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "c": Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "d": Array [
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;

exports[`skip 0 rounds on last round should not end the game 1`] = `
Object {
  "bid": Object {
    "a": 0,
    "b": 0,
    "c": 0,
    "d": 0,
  },
  "currentPlayerOrder": Array [
    "a",
    "b",
    "c",
    "d",
  ],
  "currentRound": 1,
  "id": "testing",
  "names": Object {
    "a": "John",
    "b": "Mary",
    "c": "Henry",
    "d": "Joe",
  },
  "rounds": 1,
  "scores": Object {
    "a": Array [],
    "b": Array [],
    "c": Array [],
    "d": Array [],
  },
  "stage": "waitingBid",
  "startTime": 1970-01-01T00:00:00.000Z,
}
`;
